--- a/model_bbox/Classifier_directory.ipynb
+++ b/model_bbox/Classifier_directory.ipynb
@@ -238,9 +238,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 109,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -254,36 +254,114 @@
     "    return x\n",
     "\n",
     "train_datagen = ImageDataGenerator(\n",
-    "    preprocessing_function = pre_fn\n",
     "    rotation_range=180,\n",
     "    shear_range=0.2,\n",
     "    zoom_range=0.1,\n",
     "    width_shift_range=0.1,\n",
     "    height_shift_range=0.1,\n",
     "    horizontal_flip=True,\n",
-    "    vertical_flip=True)"
+    "    vertical_flip=True)\n",
+    "\n",
+    "nbr_perClass = int(BatchSize / len(FISH_CLASSES))   \n",
+    "def generator(datagen = train_datagen):\n",
+    "    while 1:\n",
+    "        batch_x = np.zeros((BatchSize, ROWS, COLS, 3), dtype=K.floatx())\n",
+    "        batch_y = np.zeros((BatchSize, len(FISH_CLASSES)), dtype=K.floatx())\n",
+    "        fn = lambda obj: obj.loc[np.random.choice(obj.index, size=nbr_perClass, replace=False),:]\n",
+    "        batch_df = GT_crop_bboxs_df.groupby('crop_class', as_index=True).apply(fn)\n",
+    "        i = 0\n",
+    "        for index,row in batch_df.iterrows():\n",
+    "            row = row.tolist()\n",
+    "            image_file = os.path.join(row[0], row[1])\n",
+    "            fish = row[3]\n",
+    "            bbox = row[4:8]\n",
+    "            img = image.load_img(TRAIN_DIR+image_file,target_size=(ROWS,COLS))\n",
+    "            x = img_to_array(img, dim_ordering=self.dim_ordering)\n",
+    "            x = train_datagen.random_transform(x)\n",
+    "            x = preprocess_input(x)\n",
+    "            batch_x[i] = x\n",
+    "            batch_y[i,FISH_CLASSES.index(fish)] = 1\n",
+    "            i += 1\n",
+    "        yield (batch_x, batch_y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 110,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 104,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/2\n"
+     ]
+    },
+    {
+     "ename": "Exception",
+     "evalue": "output of generator should be a tuple (x, y, sample_weight) or (x, y). Found: None",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mException\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-110-e4f9694bc79d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     29\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     30\u001b[0m \u001b[0;31m# train the model on the new data for a few epochs\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 31\u001b[0;31m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit_generator\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgenerator\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msamples_per_epoch\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mBatchSize\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnb_epoch\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/opt/anaconda3/lib/python3.5/site-packages/keras/engine/training.py\u001b[0m in \u001b[0;36mfit_generator\u001b[0;34m(self, generator, samples_per_epoch, nb_epoch, verbose, callbacks, validation_data, nb_val_samples, class_weight, max_q_size, nb_worker, pickle_safe, initial_epoch)\u001b[0m\n\u001b[1;32m   1423\u001b[0m                     raise Exception('output of generator should be a tuple '\n\u001b[1;32m   1424\u001b[0m                                     \u001b[0;34m'(x, y, sample_weight) '\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1425\u001b[0;31m                                     'or (x, y). Found: ' + str(generator_output))\n\u001b[0m\u001b[1;32m   1426\u001b[0m                 \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgenerator_output\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1427\u001b[0m                     \u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgenerator_output\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mException\u001b[0m: output of generator should be a tuple (x, y, sample_weight) or (x, y). Found: None"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception in thread Thread-5:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/opt/anaconda3/lib/python3.5/threading.py\", line 914, in _bootstrap_inner\n",
+      "    self.run()\n",
+      "  File \"/opt/anaconda3/lib/python3.5/threading.py\", line 862, in run\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "  File \"/opt/anaconda3/lib/python3.5/site-packages/keras/engine/training.py\", line 404, in data_generator_task\n",
+      "    generator_output = next(generator)\n",
+      "  File \"<ipython-input-109-66e8a5aeabad>\", line 33, in generator\n",
+      "    x = img_to_array(img, dim_ordering=self.dim_ordering)\n",
+      "NameError: name 'img_to_array' is not defined\n",
+      "\n"
+     ]
     }
    ],
    "source": [
-    "FISH_CLASSES.index('NoF')"
+    "#Resnet50\n",
+    "#stg1 training\n",
+    "\n",
+    "from keras.applications.resnet50 import ResNet50\n",
+    "\n",
+    "base_model = ResNet50(weights='imagenet', include_top=False)\n",
+    "x = base_model.output\n",
+    "x = GlobalAveragePooling2D()(x)\n",
+    "#x = Flatten()(x)\n",
+    "#x = Dense(256, init='glorot_normal', activation='relu')(x)\n",
+    "#x = LeakyReLU(alpha=0.33)(x)\n",
+    "#x = Dropout(0.5)(x)\n",
+    "#x = Dense(256, init='glorot_normal', activation='relu')(x)\n",
+    "#x = LeakyReLU(alpha=0.33)(x)\n",
+    "x = Dropout(0.5)(x)\n",
+    "predictions = Dense(len(FISH_CLASSES), init='glorot_normal', activation='softmax')(x)\n",
+    "\n",
+    "# this is the model we will train\n",
+    "model = Model(input=base_model.input, output=predictions)\n",
+    "\n",
+    "# first: train only the top layers (which were randomly initialized)\n",
+    "# i.e. freeze all convolutional VGG16 layers\n",
+    "for layer in base_model.layers:\n",
+    "    layer.trainable = False\n",
+    "\n",
+    "# compile the model (should be done *after* setting layers to non-trainable)\n",
+    "optimizer = Adam(lr=LearningRate)\n",
+    "model.compile(optimizer=optimizer, loss='categorical_crossentropy', metrics=['accuracy'])\n",
+    "\n",
+    "# train the model on the new data for a few epochs\n",
+    "model.fit_generator(generator(), samples_per_epoch=BatchSize*2, nb_epoch=2)"
    ]
   },
   {
@@ -293,67 +371,7 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "nbr_perClass = int(BatchSize / len(FISH_CLASSES))\n",
-    "\n",
-    "    with self.lock:\n",
-    "    index_array, current_index, current_batch_size = next(self.index_generator)\n",
-    "    # The transformation of images is not under thread lock\n",
-    "    # so it can be done in parallel\n",
-    "    batch_x = np.zeros((BatchSize, ROWS, COLS, 3), dtype=K.floatx())\n",
-    "    batch_y = np.zeros((BatchSize, len(FISH_CLASSES)), dtype=K.floatx())\n",
-    "    fn = lambda obj: obj.loc[np.random.choice(obj.index, size=nbr_perClass, replace=False),:]\n",
-    "    batch_df = GT_crop_bboxs_df.groupby('crop_class', as_index=True).apply(fn)\n",
-    "    i = 0\n",
-    "    for index,row in batch_df.iterrows():\n",
-    "        row = row.tolist()\n",
-    "        image_file = os.path.join(row[0], row[1])\n",
-    "        fish = row[3]\n",
-    "        bbox = row[4:8]\n",
-    "        img = image.load_img(TRAIN_DIR+image_file,target_size=(ROWS,COLS))\n",
-    "        x = img_to_array(img, dim_ordering=self.dim_ordering)\n",
-    "        x = train_datagen.random_transform(x)\n",
-    "        x = train_datagen.standardize(x)\n",
-    "        batch_x[i] = x\n",
-    "        batch_y[i,FISH_CLASSES.index(fish)] = 1\n",
-    "        i += 1\n",
-    "    return batch_x, batch_y\n",
-    "    \n",
-    "def generate_arrays_from_file(path):\n",
-    "    while 1:\n",
-    "        f = open(path)\n",
-    "        for line in f:\n",
-    "            # create numpy arrays of input data\n",
-    "            # and labels, from each line in the file\n",
-    "            x, y = process_line(line)\n",
-    "            img = load_images(x)\n",
-    "            yield (img, y)\n",
-    "        f.close()\n",
-    "\n",
-    "    while 1:\n",
-    "        if seed is not None:\n",
-    "            np.random.seed(seed + self.total_batches_seen)\n",
-    "        if self.batch_index == 0:\n",
-    "            index_array = np.arange(n)\n",
-    "            if shuffle:\n",
-    "                index_array = np.random.permutation(n)\n",
-    "\n",
-    "        current_index = (self.batch_index * batch_size) % n\n",
-    "        if n >= current_index + batch_size:\n",
-    "            current_batch_size = batch_size\n",
-    "            self.batch_index += 1\n",
-    "        else:\n",
-    "            current_batch_size = n - current_index\n",
-    "            self.batch_index = 0\n",
-    "        self.total_batches_seen += 1\n",
-    "        yield (index_array[current_index: current_index + current_batch_size],\n",
-    "               current_index, current_batch_size)\n",
-    "        \n",
-    "       \n",
-    "            \n",
-    "model.fit_generator(generate_arrays_from_file('/my_file.txt'),\n",
-    "        samples_per_epoch=10000, nb_epoch=10)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
