--- a/model_bbox/Classifier_directory.ipynb
+++ b/model_bbox/Classifier_directory.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -46,22 +46,33 @@
     "ROWS = 224\n",
     "COLS = 224\n",
     "BatchSize = 128\n",
-    "LearningRate = 1e-4\n"
+    "LearningRate = 1e-4"
    ]
   },
   {
-   "cell_type": "raw",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "# GT_crop_bboxs_df = ['image_class','image_file','crop_index','crop_class','x_min',''y_min','x_max','ymax']\n",
-    "# like RCNN expand the crop by 16 pixels\n",
-    "p=16        \n",
-    "GT_crop_bboxs_df = pd.DataFrame(columns=['image_class','image_file','crop_index','crop_class','x_min','y_min','x_max','ymax'])  \n",
     "\n",
-    "crop_classes=FISH_CLASSES[:]\n",
-    "crop_classes.remove('NoF')\n",
+    "if os.path.exists('../data/GT_crop_bboxs_df_directory.pickle'):\n",
+    "    print ('Loading from file GT_crop_bboxs_df_directory.pickle.')\n",
+    "    with open('../data/GT_crop_bboxs_df_directory.pickle', 'rb') as f:\n",
+    "        GT_crop_bboxs_df = pd.read_pickle(GT_crop_bboxs_df_directory.pickle)\n",
+    "else:\n",
+    "    print ('Generating file GT_crop_bboxs_df_directory.pickle.'.format(ROWS, COLS))\n",
+    "    # like RCNN expand the crop by 16 pixels\n",
+    "    p=16        \n",
+    "    GT_crop_bboxs_df = pd.DataFrame(columns=['image_class','image_file','crop_index','crop_class','x_min','y_min','x_max','ymax'])  \n",
     "\n",
-    "for c in crop_classes:\n",
+    "    crop_classes=FISH_CLASSES[:]\n",
+    "    crop_classes.remove('NoF')\n",
+    "\n",
+    "    for c in crop_classes:\n",
     "    print(c)\n",
     "    j = json.load(open('../data/BBannotations/{}.json'.format(c), 'r'))\n",
     "    for l in j: \n",
@@ -86,30 +97,30 @@
     "            assert max(ymin_expand,0)<min(ymax_expand,height_image)\n",
     "            GT_crop_bboxs_df.loc[len(GT_crop_bboxs_df)]=[c,tail,i,a[\"class\"],max(xmin_expand,0),max(ymin_expand,0),min(xmax_expand,width_image),min(ymax_expand,height_image)]\n",
     "            if a[\"class\"] != c: print(GT_crop_bboxs_df.tail(1))\n",
-    "                \n",
     "\n",
-    "#crop NoF by detections_full_AGNOSTICnms.pkl\n",
     "\n",
-    "RFCN_MODEL = 'resnet101_rfcn_ohem_iter_30000'\n",
+    "    #crop NoF by detections_full_AGNOSTICnms.pkl\n",
     "\n",
-    "with open('../data/RFCN_detections/detections_full_AGNOSTICnms_'+RFCN_MODEL+'.pkl','rb') as f:\n",
+    "    RFCN_MODEL = 'resnet101_rfcn_ohem_iter_30000'\n",
+    "\n",
+    "    with open('../data/RFCN_detections/detections_full_AGNOSTICnms_'+RFCN_MODEL+'.pkl','rb') as f:\n",
     "    detections_full_AGNOSTICnms = pickle.load(f, encoding='latin1') \n",
-    "train_detections_full_AGNOSTICnms = detections_full_AGNOSTICnms[1000:]\n",
-    "with open(\"../RFCN/ImageSets/Main/train_test.txt\",\"r\") as f:\n",
+    "    train_detections_full_AGNOSTICnms = detections_full_AGNOSTICnms[1000:]\n",
+    "    with open(\"../RFCN/ImageSets/Main/train_test.txt\",\"r\") as f:\n",
     "    train_files = f.readlines()\n",
-    "assert len(train_detections_full_AGNOSTICnms) == len(train_files)\n",
+    "    assert len(train_detections_full_AGNOSTICnms) == len(train_files)\n",
     "\n",
     "\n",
-    "num_NoF_perIm = 10\n",
+    "    num_NoF_perIm = 10\n",
     "\n",
-    "for im in range(len(train_detections_full_AGNOSTICnms)):\n",
+    "    for im in range(len(train_detections_full_AGNOSTICnms)):\n",
     "    if im%1000 == 0: print(im)\n",
-    "        \n",
+    "\n",
     "    basename = train_files[im][:9]\n",
     "    image_class = train_files[im][10:-1]\n",
     "    image = Image.open(TRAIN_DIR+image_class+'/'+basename+'.jpg')\n",
     "    width_image, height_image = image.size\n",
-    "    \n",
+    "\n",
     "    bboxes = []\n",
     "    detects_im = train_detections_full_AGNOSTICnms[im]\n",
     "    for i in range(len(detects_im)):\n",
@@ -117,7 +128,7 @@
     "            bboxes.append(detects_im[i,:]) \n",
     "    bboxes = np.asarray(bboxes)\n",
     "    bboxes = bboxes[np.random.choice(bboxes.shape[0], num_NoF_perIm, replace=False), :]\n",
-    "    \n",
+    "\n",
     "    for j in range(len(bboxes)):    \n",
     "        bbox = bboxes[j]\n",
     "        xmin = bbox[0]\n",
@@ -135,8 +146,8 @@
     "        assert max(xmin_expand,0)<min(xmax_expand,width_image)\n",
     "        assert max(ymin_expand,0)<min(ymax_expand,height_image)\n",
     "        GT_crop_bboxs_df.loc[len(GT_crop_bboxs_df)]=[image_class,basename+'.jpg',j,'NoF',max(xmin_expand,0),max(ymin_expand,0),min(xmax_expand,width_image),min(ymax_expand,height_image)]\n",
-    "    \n",
-    "GT_crop_bboxs_df.to_pickle('../data/GT_crop_bboxs_df_directory.pickle')                "
+    "\n",
+    "    GT_crop_bboxs_df.to_pickle('../data/GT_crop_bboxs_df_directory.pickle')                "
    ]
   },
   {
@@ -167,83 +178,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>image_class</th>\n",
-       "      <th>image_file</th>\n",
-       "      <th>crop_index</th>\n",
-       "      <th>crop_class</th>\n",
-       "      <th>x_min</th>\n",
-       "      <th>y_min</th>\n",
-       "      <th>x_max</th>\n",
-       "      <th>ymax</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>4370</th>\n",
-       "      <td>YFT</td>\n",
-       "      <td>img_07911.jpg</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>YFT</td>\n",
-       "      <td>724.290780</td>\n",
-       "      <td>94.680851</td>\n",
-       "      <td>1168.617021</td>\n",
-       "      <td>347.872340</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4371</th>\n",
-       "      <td>ALB</td>\n",
-       "      <td>img_00003.jpg</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NoF</td>\n",
-       "      <td>299.452861</td>\n",
-       "      <td>26.285698</td>\n",
-       "      <td>1168.160268</td>\n",
-       "      <td>286.172768</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     image_class     image_file  crop_index crop_class       x_min      y_min  \\\n",
-       "4370         YFT  img_07911.jpg         1.0        YFT  724.290780  94.680851   \n",
-       "4371         ALB  img_00003.jpg         0.0        NoF  299.452861  26.285698   \n",
-       "\n",
-       "            x_max        ymax  \n",
-       "4370  1168.617021  347.872340  \n",
-       "4371  1168.160268  286.172768  "
-      ]
-     },
-     "execution_count": 72,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "GT_crop_bboxs_df[4370:4372]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
+    "def load_img(path, target_size=None):\n",
+    "    img = Image.open(path)\n",
+    "    img = img.convert('RGB')\n",
+    "    if target_size:\n",
+    "        img = img.resize((target_size[1], target_size[0]))\n",
+    "    return img\n",
+    "\n",
     "def preprocess_input(x):\n",
     "    #resnet50 image preprocessing\n",
     "    # 'RGB'->'BGR'\n",
@@ -263,7 +210,7 @@
     "    vertical_flip=True)\n",
     "\n",
     "nbr_perClass = int(BatchSize / len(FISH_CLASSES))   \n",
-    "def generator(datagen = train_datagen):\n",
+    "def generator(datagen):\n",
     "    while 1:\n",
     "        batch_x = np.zeros((BatchSize, ROWS, COLS, 3), dtype=K.floatx())\n",
     "        batch_y = np.zeros((BatchSize, len(FISH_CLASSES)), dtype=K.floatx())\n",
@@ -275,61 +222,25 @@
     "            image_file = os.path.join(row[0], row[1])\n",
     "            fish = row[3]\n",
     "            bbox = row[4:8]\n",
-    "            img = image.load_img(TRAIN_DIR+image_file,target_size=(ROWS,COLS))\n",
-    "            x = img_to_array(img, dim_ordering=self.dim_ordering)\n",
-    "            x = train_datagen.random_transform(x)\n",
+    "            img = load_img(TRAIN_DIR+image_file,target_size=(ROWS,COLS))\n",
+    "            x = np.asarray(img, dtype=K.floatx())\n",
+    "            x = datagen.random_transform(x)\n",
     "            x = preprocess_input(x)\n",
     "            batch_x[i] = x\n",
     "            batch_y[i,FISH_CLASSES.index(fish)] = 1\n",
     "            i += 1\n",
-    "        yield (batch_x, batch_y)"
+    "        yield (batch_x, batch_y)\n",
+    "        \n",
+    "train_generator = generator(datagen = train_datagen)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/2\n"
-     ]
-    },
-    {
-     "ename": "Exception",
-     "evalue": "output of generator should be a tuple (x, y, sample_weight) or (x, y). Found: None",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mException\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-110-e4f9694bc79d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     29\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     30\u001b[0m \u001b[0;31m# train the model on the new data for a few epochs\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 31\u001b[0;31m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit_generator\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgenerator\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msamples_per_epoch\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mBatchSize\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnb_epoch\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/opt/anaconda3/lib/python3.5/site-packages/keras/engine/training.py\u001b[0m in \u001b[0;36mfit_generator\u001b[0;34m(self, generator, samples_per_epoch, nb_epoch, verbose, callbacks, validation_data, nb_val_samples, class_weight, max_q_size, nb_worker, pickle_safe, initial_epoch)\u001b[0m\n\u001b[1;32m   1423\u001b[0m                     raise Exception('output of generator should be a tuple '\n\u001b[1;32m   1424\u001b[0m                                     \u001b[0;34m'(x, y, sample_weight) '\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1425\u001b[0;31m                                     'or (x, y). Found: ' + str(generator_output))\n\u001b[0m\u001b[1;32m   1426\u001b[0m                 \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgenerator_output\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1427\u001b[0m                     \u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgenerator_output\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mException\u001b[0m: output of generator should be a tuple (x, y, sample_weight) or (x, y). Found: None"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Exception in thread Thread-5:\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/opt/anaconda3/lib/python3.5/threading.py\", line 914, in _bootstrap_inner\n",
-      "    self.run()\n",
-      "  File \"/opt/anaconda3/lib/python3.5/threading.py\", line 862, in run\n",
-      "    self._target(*self._args, **self._kwargs)\n",
-      "  File \"/opt/anaconda3/lib/python3.5/site-packages/keras/engine/training.py\", line 404, in data_generator_task\n",
-      "    generator_output = next(generator)\n",
-      "  File \"<ipython-input-109-66e8a5aeabad>\", line 33, in generator\n",
-      "    x = img_to_array(img, dim_ordering=self.dim_ordering)\n",
-      "NameError: name 'img_to_array' is not defined\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Resnet50\n",
     "#stg1 training\n",
@@ -361,7 +272,7 @@
     "model.compile(optimizer=optimizer, loss='categorical_crossentropy', metrics=['accuracy'])\n",
     "\n",
     "# train the model on the new data for a few epochs\n",
-    "model.fit_generator(generator(), samples_per_epoch=BatchSize*2, nb_epoch=2)"
+    "model.fit_generator(train_generator, samples_per_epoch=BatchSize*2, nb_epoch=2, nb_worker=3, pickle_safe=True)"
    ]
   },
   {
